--- a/gateway-server/build.gradle
+++ b/gateway-server/build.gradle
@@ -2,4 +2,5 @@ version '1.0-SNAPSHOT'
 
 dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-gateway'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
